seaqt/QtWidgets/gen_qtableview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QHeaderView QHeaderView;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTableView QTableView;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
QTableView* QTableView_new(QWidget* parent);
QTableView* QTableView_new2();
QMetaObject* QTableView_metaObject(const QTableView* self);
void* QTableView_metacast(QTableView* self, const char* param1);
int QTableView_metacall(QTableView* self, int param1, int param2, void** param3);
struct miqt_string QTableView_tr(const char* s);
void QTableView_setModel(QTableView* self, QAbstractItemModel* model);
void QTableView_setRootIndex(QTableView* self, QModelIndex* index);
void QTableView_setSelectionModel(QTableView* self, QItemSelectionModel* selectionModel);
void QTableView_doItemsLayout(QTableView* self);
QHeaderView* QTableView_horizontalHeader(const QTableView* self);
QHeaderView* QTableView_verticalHeader(const QTableView* self);
void QTableView_setHorizontalHeader(QTableView* self, QHeaderView* header);
void QTableView_setVerticalHeader(QTableView* self, QHeaderView* header);
int QTableView_rowViewportPosition(const QTableView* self, int row);
int QTableView_rowAt(const QTableView* self, int y);
void QTableView_setRowHeight(QTableView* self, int row, int height);
int QTableView_rowHeight(const QTableView* self, int row);
int QTableView_columnViewportPosition(const QTableView* self, int column);
int QTableView_columnAt(const QTableView* self, int x);
void QTableView_setColumnWidth(QTableView* self, int column, int width);
int QTableView_columnWidth(const QTableView* self, int column);
bool QTableView_isRowHidden(const QTableView* self, int row);
void QTableView_setRowHidden(QTableView* self, int row, bool hide);
bool QTableView_isColumnHidden(const QTableView* self, int column);
void QTableView_setColumnHidden(QTableView* self, int column, bool hide);
void QTableView_setSortingEnabled(QTableView* self, bool enable);
bool QTableView_isSortingEnabled(const QTableView* self);
bool QTableView_showGrid(const QTableView* self);
int QTableView_gridStyle(const QTableView* self);
void QTableView_setGridStyle(QTableView* self, int style);
void QTableView_setWordWrap(QTableView* self, bool on);
bool QTableView_wordWrap(const QTableView* self);
void QTableView_setCornerButtonEnabled(QTableView* self, bool enable);
bool QTableView_isCornerButtonEnabled(const QTableView* self);
QRect* QTableView_visualRect(const QTableView* self, QModelIndex* index);
void QTableView_scrollTo(QTableView* self, QModelIndex* index, int hint);
QModelIndex* QTableView_indexAt(const QTableView* self, QPoint* p);
void QTableView_setSpan(QTableView* self, int row, int column, int rowSpan, int columnSpan);
int QTableView_rowSpan(const QTableView* self, int row, int column);
int QTableView_columnSpan(const QTableView* self, int row, int column);
void QTableView_clearSpans(QTableView* self);
void QTableView_selectRow(QTableView* self, int row);
void QTableView_selectColumn(QTableView* self, int column);
void QTableView_hideRow(QTableView* self, int row);
void QTableView_hideColumn(QTableView* self, int column);
void QTableView_showRow(QTableView* self, int row);
void QTableView_showColumn(QTableView* self, int column);
void QTableView_resizeRowToContents(QTableView* self, int row);
void QTableView_resizeRowsToContents(QTableView* self);
void QTableView_resizeColumnToContents(QTableView* self, int column);
void QTableView_resizeColumnsToContents(QTableView* self);
void QTableView_sortByColumn(QTableView* self, int column, int order);
void QTableView_setShowGrid(QTableView* self, bool show);
struct miqt_string QTableView_tr2(const char* s, const char* c);
struct miqt_string QTableView_tr3(const char* s, const char* c, int n);
bool QTableView_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTableView_virtualbase_metaObject(const void* self);
bool QTableView_override_virtual_metacast(void* self, intptr_t slot);
void* QTableView_virtualbase_metacast(void* self, const char* param1);
bool QTableView_override_virtual_metacall(void* self, intptr_t slot);
int QTableView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTableView_override_virtual_setModel(void* self, intptr_t slot);
void QTableView_virtualbase_setModel(void* self, QAbstractItemModel* model);
bool QTableView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QTableView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QTableView_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QTableView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QTableView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QTableView_virtualbase_doItemsLayout(void* self);
bool QTableView_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QTableView_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QTableView_override_virtual_scrollTo(void* self, intptr_t slot);
void QTableView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QTableView_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QTableView_virtualbase_indexAt(const void* self, QPoint* p);
bool QTableView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QTableView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QTableView_override_virtual_initViewItemOption(void* self, intptr_t slot);
void QTableView_virtualbase_initViewItemOption(const void* self, QStyleOptionViewItem* option);
bool QTableView_override_virtual_paintEvent(void* self, intptr_t slot);
void QTableView_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QTableView_override_virtual_timerEvent(void* self, intptr_t slot);
void QTableView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTableView_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QTableView_virtualbase_horizontalOffset(const void* self);
bool QTableView_override_virtual_verticalOffset(void* self, intptr_t slot);
int QTableView_virtualbase_verticalOffset(const void* self);
bool QTableView_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QTableView_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QTableView_override_virtual_setSelection(void* self, intptr_t slot);
void QTableView_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QTableView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QTableView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QTableView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QTableView_virtualbase_selectedIndexes(const void* self);
bool QTableView_override_virtual_updateGeometries(void* self, intptr_t slot);
void QTableView_virtualbase_updateGeometries(void* self);
bool QTableView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QTableView_virtualbase_viewportSizeHint(const void* self);
bool QTableView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QTableView_virtualbase_sizeHintForRow(const void* self, int row);