seaqt/QtWidgets/gen_qtableview.nim


proc fcQTableView_new(parent: pointer): ptr cQTableView {.importc: "QTableView_new".}
proc fcQTableView_new2(): ptr cQTableView {.importc: "QTableView_new2".}
proc fcQTableView_metaObject(self: pointer, ): pointer {.importc: "QTableView_metaObject".}
proc fcQTableView_metacast(self: pointer, param1: cstring): pointer {.importc: "QTableView_metacast".}
proc fcQTableView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTableView_metacall".}
proc fcQTableView_tr(s: cstring): struct_miqt_string {.importc: "QTableView_tr".}
proc fcQTableView_setModel(self: pointer, model: pointer): void {.importc: "QTableView_setModel".}
proc fcQTableView_setRootIndex(self: pointer, index: pointer): void {.importc: "QTableView_setRootIndex".}
proc fcQTableView_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QTableView_setSelectionModel".}
proc fcQTableView_doItemsLayout(self: pointer, ): void {.importc: "QTableView_doItemsLayout".}
proc fcQTableView_horizontalHeader(self: pointer, ): pointer {.importc: "QTableView_horizontalHeader".}
proc fcQTableView_verticalHeader(self: pointer, ): pointer {.importc: "QTableView_verticalHeader".}
proc fcQTableView_setHorizontalHeader(self: pointer, header: pointer): void {.importc: "QTableView_setHorizontalHeader".}
proc fcQTableView_setVerticalHeader(self: pointer, header: pointer): void {.importc: "QTableView_setVerticalHeader".}
proc fcQTableView_rowViewportPosition(self: pointer, row: cint): cint {.importc: "QTableView_rowViewportPosition".}
proc fcQTableView_rowAt(self: pointer, y: cint): cint {.importc: "QTableView_rowAt".}
proc fcQTableView_setRowHeight(self: pointer, row: cint, height: cint): void {.importc: "QTableView_setRowHeight".}
proc fcQTableView_rowHeight(self: pointer, row: cint): cint {.importc: "QTableView_rowHeight".}
proc fcQTableView_columnViewportPosition(self: pointer, column: cint): cint {.importc: "QTableView_columnViewportPosition".}
proc fcQTableView_columnAt(self: pointer, x: cint): cint {.importc: "QTableView_columnAt".}
proc fcQTableView_setColumnWidth(self: pointer, column: cint, width: cint): void {.importc: "QTableView_setColumnWidth".}
proc fcQTableView_columnWidth(self: pointer, column: cint): cint {.importc: "QTableView_columnWidth".}
proc fcQTableView_isRowHidden(self: pointer, row: cint): bool {.importc: "QTableView_isRowHidden".}
proc fcQTableView_setRowHidden(self: pointer, row: cint, hide: bool): void {.importc: "QTableView_setRowHidden".}
proc fcQTableView_isColumnHidden(self: pointer, column: cint): bool {.importc: "QTableView_isColumnHidden".}
proc fcQTableView_setColumnHidden(self: pointer, column: cint, hide: bool): void {.importc: "QTableView_setColumnHidden".}
proc fcQTableView_setSortingEnabled(self: pointer, enable: bool): void {.importc: "QTableView_setSortingEnabled".}
proc fcQTableView_isSortingEnabled(self: pointer, ): bool {.importc: "QTableView_isSortingEnabled".}
proc fcQTableView_showGrid(self: pointer, ): bool {.importc: "QTableView_showGrid".}
proc fcQTableView_gridStyle(self: pointer, ): cint {.importc: "QTableView_gridStyle".}
proc fcQTableView_setGridStyle(self: pointer, style: cint): void {.importc: "QTableView_setGridStyle".}
proc fcQTableView_setWordWrap(self: pointer, on: bool): void {.importc: "QTableView_setWordWrap".}
proc fcQTableView_wordWrap(self: pointer, ): bool {.importc: "QTableView_wordWrap".}
proc fcQTableView_setCornerButtonEnabled(self: pointer, enable: bool): void {.importc: "QTableView_setCornerButtonEnabled".}
proc fcQTableView_isCornerButtonEnabled(self: pointer, ): bool {.importc: "QTableView_isCornerButtonEnabled".}
proc fcQTableView_visualRect(self: pointer, index: pointer): pointer {.importc: "QTableView_visualRect".}
proc fcQTableView_scrollTo(self: pointer, index: pointer, hint: cint): void {.importc: "QTableView_scrollTo".}
proc fcQTableView_indexAt(self: pointer, p: pointer): pointer {.importc: "QTableView_indexAt".}
proc fcQTableView_setSpan(self: pointer, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void {.importc: "QTableView_setSpan".}
proc fcQTableView_rowSpan(self: pointer, row: cint, column: cint): cint {.importc: "QTableView_rowSpan".}
proc fcQTableView_columnSpan(self: pointer, row: cint, column: cint): cint {.importc: "QTableView_columnSpan".}
proc fcQTableView_clearSpans(self: pointer, ): void {.importc: "QTableView_clearSpans".}
proc fcQTableView_selectRow(self: pointer, row: cint): void {.importc: "QTableView_selectRow".}
proc fcQTableView_selectColumn(self: pointer, column: cint): void {.importc: "QTableView_selectColumn".}
proc fcQTableView_hideRow(self: pointer, row: cint): void {.importc: "QTableView_hideRow".}
proc fcQTableView_hideColumn(self: pointer, column: cint): void {.importc: "QTableView_hideColumn".}
proc fcQTableView_showRow(self: pointer, row: cint): void {.importc: "QTableView_showRow".}
proc fcQTableView_showColumn(self: pointer, column: cint): void {.importc: "QTableView_showColumn".}
proc fcQTableView_resizeRowToContents(self: pointer, row: cint): void {.importc: "QTableView_resizeRowToContents".}
proc fcQTableView_resizeRowsToContents(self: pointer, ): void {.importc: "QTableView_resizeRowsToContents".}
proc fcQTableView_resizeColumnToContents(self: pointer, column: cint): void {.importc: "QTableView_resizeColumnToContents".}
proc fcQTableView_resizeColumnsToContents(self: pointer, ): void {.importc: "QTableView_resizeColumnsToContents".}
proc fcQTableView_sortByColumn(self: pointer, column: cint, order: cint): void {.importc: "QTableView_sortByColumn".}
proc fcQTableView_setShowGrid(self: pointer, show: bool): void {.importc: "QTableView_setShowGrid".}
proc fcQTableView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTableView_tr2".}
proc fcQTableView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTableView_tr3".}
proc fQTableView_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTableView_virtualbase_metaObject".}
proc fcQTableView_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTableView_override_virtual_metaObject".}
proc fQTableView_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTableView_virtualbase_metacast".}
proc fcQTableView_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTableView_override_virtual_metacast".}
proc fQTableView_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTableView_virtualbase_metacall".}
proc fcQTableView_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTableView_override_virtual_metacall".}
proc fQTableView_virtualbase_setModel(self: pointer, model: pointer): void{.importc: "QTableView_virtualbase_setModel".}
proc fcQTableView_override_virtual_setModel(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setModel".}
proc fQTableView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QTableView_virtualbase_setRootIndex".}
proc fcQTableView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setRootIndex".}
proc fQTableView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QTableView_virtualbase_setSelectionModel".}
proc fcQTableView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setSelectionModel".}
proc fQTableView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QTableView_virtualbase_doItemsLayout".}
proc fcQTableView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QTableView_override_virtual_doItemsLayout".}
proc fQTableView_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QTableView_virtualbase_visualRect".}
proc fcQTableView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QTableView_override_virtual_visualRect".}
proc fQTableView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QTableView_virtualbase_scrollTo".}
proc fcQTableView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QTableView_override_virtual_scrollTo".}
proc fQTableView_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QTableView_virtualbase_indexAt".}
proc fcQTableView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QTableView_override_virtual_indexAt".}
proc fQTableView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QTableView_virtualbase_scrollContentsBy".}
proc fcQTableView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QTableView_override_virtual_scrollContentsBy".}
proc fQTableView_virtualbase_initViewItemOption(self: pointer, option: pointer): void{.importc: "QTableView_virtualbase_initViewItemOption".}
proc fcQTableView_override_virtual_initViewItemOption(self: pointer, slot: int) {.importc: "QTableView_override_virtual_initViewItemOption".}
proc fQTableView_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QTableView_virtualbase_paintEvent".}
proc fcQTableView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_paintEvent".}
proc fQTableView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_timerEvent".}
proc fcQTableView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_timerEvent".}
proc fQTableView_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QTableView_virtualbase_horizontalOffset".}
proc fcQTableView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QTableView_override_virtual_horizontalOffset".}
proc fQTableView_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QTableView_virtualbase_verticalOffset".}
proc fcQTableView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QTableView_override_virtual_verticalOffset".}
proc fQTableView_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QTableView_virtualbase_moveCursor".}
proc fcQTableView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QTableView_override_virtual_moveCursor".}
proc fQTableView_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QTableView_virtualbase_setSelection".}
proc fcQTableView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setSelection".}
proc fQTableView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QTableView_virtualbase_visualRegionForSelection".}
proc fcQTableView_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QTableView_override_virtual_visualRegionForSelection".}
proc fQTableView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QTableView_virtualbase_selectedIndexes".}
proc fcQTableView_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QTableView_override_virtual_selectedIndexes".}
proc fQTableView_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QTableView_virtualbase_updateGeometries".}
proc fcQTableView_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QTableView_override_virtual_updateGeometries".}
proc fQTableView_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QTableView_virtualbase_viewportSizeHint".}
proc fcQTableView_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QTableView_override_virtual_viewportSizeHint".}
proc fQTableView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QTableView_virtualbase_sizeHintForRow".}
proc fcQTableView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QTableView_override_virtual_sizeHintForRow".}
